[iman] tidy up information + remove unused code

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Web RPG</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="css/labs.css">
   <script src="./js/getQueryString.js"></script>
   <script src="./js/jquery-3.1.1.min.js"></script>
   <script src="./js/datgui.js"></script>
@@ -21,6 +19,7 @@
   <div id="phaser-example" style="overflow: hidden;">
   </div>
 
+  <script type="text/javascript" src="./src/information.js"></script>
   <script type="text/javascript" src="./src/player.js"></script>
   <script type="text/javascript" src="./src/index.js"></script>
 </body>
