--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div id="phaser-example" style="overflow: hidden;">
   </div>
 
+  <script type="text/javascript" src="./src/debug.js"></script>s
   <script type="text/javascript" src="./src/information.js"></script>
   <script type="text/javascript" src="./src/player.js"></script>
   <script type="text/javascript" src="./src/index.js"></script>
