[iman] tidy up world and remove collider in player

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <script type="text/javascript" src="./src/debug.js"></script>s
   <script type="text/javascript" src="./src/information.js"></script>
+  <script type="text/javascript" src="./src/world.js"></script>
   <script type="text/javascript" src="./src/player.js"></script>
   <script type="text/javascript" src="./src/index.js"></script>
 </body>
