[iman] player with armor and weapon animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="phaser-example" style="overflow: hidden;">
   </div>
 
-  <script type="text/javascript" src="./src/debug.js"></script>s
+  <script type="text/javascript" src="./src/debug.js"></script>
   <script type="text/javascript" src="./src/information.js"></script>
   <script type="text/javascript" src="./src/world.js"></script>
   <script type="text/javascript" src="./src/player.js"></script>
